--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to RegainedMyWillTo.Live</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
-    <script src="script.js" defer></script> <!-- Link to JS file -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -32,12 +32,7 @@
         <div class="server-status">
             <p>Server Status: <span id="server-status">Checking...</span></p>
             <p>Players Online: <span id="player-count">0</span></p>
-        </div>
-
-        <!-- Player List -->
-        <div class="player-list">
-            <h2>Players Online</h2>
-            <div id="players"></div>
+            <div id="player-list"></div>
         </div>
 
         <!-- News Ticker -->
